website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.0.1/migration/v2/migration-versioned-sites.mdx
---
slug: /migration/v2/versioned-sites
---

# 版本化網站

請先閱讀 https://docusaurus.io/blog/2018/09/11/Towards-Docusaurus-2#versioning 了解 v1 版本控制方法的問題。

:::note

版本化文件通常會由 [遷移 CLI](./migration-automated.mdx) 正確遷移

:::

## 遷移你的 `versioned_docs` 前置資料 {#migrate-your-versioned_docs-front-matter}

與 v1 不同，每個版本化文件的 Markdown 標頭不再使用 `version-${version}-${original_id}` 作為實際 ID 欄位的值。請參考以下情境以獲得更好的解釋。

舉例來說，如果你有一個 `docs/hello.md`。

```md
---
id: hello
title: Hello, World !
---

Hi, Endilie here :)
```

當你創建新版本 1.0.0 時，在 Docusaurus v1 中，`website/versioned_docs/version-1.0.0/hello.md` 看起來像這樣：

```md
---
id: version-1.0.0-hello
title: Hello, World !
original_id: hello
---

Hi, Endilie here :)
```

相比之下，Docusaurus 2 的 `website/versioned_docs/version-1.0.0/hello.md` 看起來像這樣（與原始文件完全相同）

```md
---
id: hello
title: Hello, World !
---

Hi, Endilie here :)
```

由於我們採用快照方式並允許使用者在版本內輕鬆移動（和編輯）文件，`id` 前置資料不再被修改並保持不變。在內部，它被設置為 `version-${version}/${id}`。

基本上，每個 versioned_docs 文件需要進行以下變更：

```diff {2-3,5}
---
- id: version-1.0.0-hello
+ id: hello
title: Hello, World !
- original_id: hello
---
Hi, Endilie here :)
```

## 遷移你的 `versioned_sidebars` {#migrate-your-versioned_sidebars}

- 將 `versioned_docs` 的 ID 引用為 `version-${version}/${id}` (v2) 而非 `version-${version}-${original_id}` (v1)。

因為在 v1 中，很有可能有人創建了一個新的文件，其前置資料 ID 為 `"version-${version}-${id}"`，這可能會與 `versioned_docs` 的 ID 衝突。

例如，Docusaurus 1 無法區分 `docs/xxx.md`

```md
---
id: version-1.0.0-hello
---

Another content
```

和 `website/versioned_docs/version-1.0.0/hello.md`

```md
---
id: version-1.0.0-hello
title: Hello, World !
original_id: hello
---

Hi, Endilie here :)
```

由於我們在 v1 和 v2 中不允許前置資料中使用 `/`，衝突的可能性較低。

因此，v1 使用者需要遷移他們的 versioned_sidebars 文件

範例 `versioned_sidebars/version-1.0.0-sidebars.json`：

```diff {2-3,5-6,9-10}  title="versioned_sidebars/version-1.0.0-sidebars.json"
{
+ "version-1.0.0/docs": {
- "version-1.0.0-docs": {
    "Test": [
+    "version-1.0.0/foo/bar",
-    "version-1.0.0-foo/bar",
    ],
    "Guides": [
+    "version-1.0.0/hello",
-    "version-1.0.0-hello"
    ]
  }
}
```

## 填充你的 `versioned_sidebars` 和 `versioned_docs` {#populate-your-versioned_sidebars-and-versioned_docs}

在 v2 中，我們使用快照方式進行文件版本控制。**每個版本化的文件不依賴於其他版本**。有可能在 `version-1.0.0` 中有 `foo.md`，但在 `version-1.2.0` 中不存在。這在之前的版本中是不可能的，因為 Docusaurus v1 有回退功能 (https://v1.docusaurus.io/docs/en/versioning#fallback-functionality)。

例如，如果你的 `versions.json` 在 v1 中看起來像這樣

```json title="versions.json"
["1.1.0", "1.0.0"]
```

Docusaurus v1 只有在文件內容不同時才會創建版本化文件。如果你的文件結構從 v1.0.0 到 v1.1.0 只有 `hello.md` 發生變更，那麼你的文件結構可能看起來像這樣。

```bash
website
├── versioned_docs
│   ├── version-1.1.0
│   │   └── hello.md
│   └── version-1.0.0
│       ├── foo
│       │   └── bar.md
│       └── hello.md
├── versioned_sidebars
│   └── version-1.0.0-sidebars.json
```

在 v2 中，你需要填充缺失的 `versioned_docs` 和 `versioned_sidebars`（並使用正確的前置資料和 ID 引用）。

```bash {3-5,12}
website
├── versioned_docs
│   ├── version-1.1.0
│   │   ├── foo
│   │   │   └── bar.md
│   │   └── hello.md
│   └── version-1.0.0
│       ├── foo
│       │   └── bar.md
│       └── hello.md
├── versioned_sidebars
│   ├── version-1.1.0-sidebars.json
│   └── version-1.0.0-sidebars.json
```

## 將 MDX 中的樣式屬性轉換為樣式物件 {#convert-style-attributes-to-style-objects-in-mdx}

Docusaurus 2 使用 JSX 來處理文件檔案。如果您在 Docusaurus 1 的文件中有任何樣式屬性，請將其轉換為樣式物件，如下所示：

```diff
---
id: demo
title: Demo
---

## Section

hello world

- pre style="background: black">zzz</pre>
+ pre style={{background: 'black'}}>zzz</pre>
```